server config update

--- a/config/server.cfg
+++ b/config/server.cfg
@@ -1,4 +1,4 @@
-hostname = "[RU] ARMATOP Antistasi Altis";
+hostname = "[RU] Партизаны { PvE | COOP | CTI | NOMODS | Antistasi }";
 password = "";
 passwordAdmin = "lohne$$";
 
@@ -24,7 +24,7 @@ allowedLoadFileExtensions[] = {"hpp","sqs","sqf","fsm","cpp","paa","txt","xml","
 
 allowedPreprocessFileExtensions[] = {"hpp","sqs","sqf","fsm","cpp","paa","txt","xml","inc","ext","sqm","ods","fxy","lip","csv","kb","bik","bikb","html","htm","biedi"};
 
-disconnectTimeout = 5;
+disconnectTimeout = 10;
 
 onUserConnected = "";
 onUserDisconnected = "";
