change server name in server config

--- a/config/server.cfg
+++ b/config/server.cfg
@@ -1,4 +1,4 @@
-hostname = "[RU] Партизаны { PvE | COOP | CTI | NOMODS | Antistasi }";
+hostname = "[RU] Партизаны { PvE | CTI | NOMODS | Antistasi }";
 password = "";
 passwordAdmin = "lohne$$";
 
